canonical finnish link added

--- a/_includes/html-head.html
+++ b/_includes/html-head.html
@@ -4,6 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% seo %}
 
+    {% if page.fi-permalink %}
+    <link rel="alternate" href="{{page.fi-permalink | relative_url}}" hreflang="fi-fi"/>
+    {% endif %}
+
     <link rel="stylesheet" href="{{ '/assets/bootstrap-4/css/bootstrap.css' | relative_url }}">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
             integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
